--- a/deck-wo-geoanalisis-onepager/index.html
+++ b/deck-wo-geoanalisis-onepager/index.html
@@ -15,6 +15,9 @@
   
   <title>Workalógico | Inteligencia Geoestadística</title>
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="../LOGOS/teseracto yellow@3x.png">
+  
   <!-- Preload critical assets -->
   <link rel="preload" href="../wo-design-system.css" as="style">
   <link rel="preload" href="../LOGOS/logo dark@3x.png" as="image">
