--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   
   <title>Workalógico | Portafolio de Presentaciones</title>
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="LOGOS/teseracto yellow@3x.png">
+  
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
