feat: add Design System Hub with centralized tokens
- Create wo-tokens.css as Single Source of Truth for all CSS variables
- Modify wo-design-system.css to import tokens via @import
- Add /hub section with interactive documentation:
  - Dashboard with stats and quick links
  - Colors page with click-to-copy swatches
  - Typography page with font scale samples
  - Spacing page with visual system
  - Components page with live previews and copyable code
  - Templates page with slide layout examples
- Add hub.js for copy-to-clipboard functionality
- Update landing page with link to Design System Hub

Changes in wo-tokens.css now propagate automatically to all 6 decks.

--- a/index.html
+++ b/index.html
@@ -566,6 +566,32 @@
           </div>
         </a>
       </div>
+      
+      <!-- RECURSOS -->
+      <div class="section-header">
+        <div class="section-icon">
+          <!-- Ícono de sistema de diseño / componentes -->
+          <svg viewBox="0 0 24 24">
+            <rect x="3" y="3" width="7" height="7" rx="1"/>
+            <rect x="14" y="3" width="7" height="7" rx="1"/>
+            <rect x="3" y="14" width="7" height="7" rx="1"/>
+            <rect x="14" y="14" width="7" height="7" rx="1"/>
+          </svg>
+        </div>
+        <h2 class="section-title">Recursos</h2>
+        <p class="section-description">Herramientas internas y documentación del sistema de diseño.</p>
+      </div>
+      <div class="decks-grid" style="grid-template-columns: minmax(320px, 400px); justify-content: center;">
+        <a href="hub/" class="deck-card">
+          <span class="deck-card__badge deck-card__badge--yellow">Interno</span>
+          <h3 class="deck-card__title">Design System Hub</h3>
+          <p class="deck-card__description">Documentación centralizada de tokens, componentes y templates. Single Source of Truth para todas las presentaciones.</p>
+          <div class="deck-card__meta">
+            <span class="deck-card__slides">📐 Tokens + Componentes</span>
+            <span class="deck-card__arrow">→</span>
+          </div>
+        </a>
+      </div>
     </main>
     
     <footer>
