--- a/deck-wo-analisis-vocacion/index.html
+++ b/deck-wo-analisis-vocacion/index.html
@@ -38,7 +38,7 @@
   <!-- Workalógico Particles System -->
   <link rel="stylesheet" href="../wo-particles.css">
 </head>
-<body>
+<body data-wo-theme="yellow">
   <!-- tsParticles Container -->
   <div id="tsparticles"></div>
   
