--- a/deck-wo-automatizacion/index.html
+++ b/deck-wo-automatizacion/index.html
@@ -382,8 +382,8 @@
       hash: true,
       center: true,
       navigationMode: 'default',
-      transition: 'fade',
-      transitionSpeed: 'default',
+      transition: 'slide', // Fluidity Overhaul: slide para mejor overlap
+      transitionSpeed: 'slow', // Fluidity Overhaul: ~800ms para soft landing
       backgroundTransition: 'fade',
       slideNumber: 'c/t',
       showSlideNumber: 'all',
