fix: Actualizar contacto y logos de marca
- Dominio actualizado: workalogico.mx → workalogico.com
- Email actualizado: contacto@ → bo@workalogico.com
- Logo amarillo en deck-wo-geoanalisis-onepager

--- a/deck-wo-analisis-vocacion/index.html
+++ b/deck-wo-analisis-vocacion/index.html
@@ -373,8 +373,8 @@
           <h1 class="wo-cta__title">¿Listo para expandir con <span class="accent">certeza</span>?</h1>
           <p class="wo-cta__subtitle">Agenda tu brief gratuito hoy</p>
           <div class="wo-cta__contact">
-            <p><a href="mailto:contacto@workalogico.mx" style="color: inherit; text-decoration: none;">contacto@workalogico.mx</a></p>
-            <p><a href="https://www.workalogico.mx" target="_blank" rel="noopener" style="color: inherit; text-decoration: none;">www.workalogico.mx</a></p>
+            <p><a href="mailto:bo@workalogico.com" style="color: inherit; text-decoration: none;">bo@workalogico.com</a></p>
+            <p><a href="https://www.workalogico.com" target="_blank" rel="noopener" style="color: inherit; text-decoration: none;">www.workalogico.com</a></p>
           </div>
         </div>
         <div class="grid-background" role="presentation" aria-hidden="true"></div>
