--- a/deck-wo-geoanalisis-onepager/index.html
+++ b/deck-wo-geoanalisis-onepager/index.html
@@ -20,7 +20,7 @@
   
   <!-- Preload critical assets -->
   <link rel="preload" href="../wo-design-system.css" as="style">
-  <link rel="preload" href="../LOGOS/logo dark@3x.png" as="image">
+  <link rel="preload" href="../LOGOS/logo yellow @3x.png" as="image">
   
   <!-- Reveal.js CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4/dist/reset.css">
@@ -485,7 +485,7 @@
            ═══════════════════════════════════════════════════════════════ -->
       <section data-background-gradient="radial-gradient(ellipse at center, #252542 0%, #0F0F1A 70%)" data-particles="true" aria-label="Portada">
         <div class="wo-cover" data-animate="cinematic">
-          <img data-src="../LOGOS/logo dark@3x.png" alt="Workalógico" class="wo-cover__logo" loading="lazy">
+          <img data-src="../LOGOS/logo yellow @3x.png" alt="Workalógico" class="wo-cover__logo" loading="lazy">
           <div class="wo-badge" role="text">Inteligencia de Mercados</div>
           <h1 class="wo-cover__title">Inteligencia <span class="accent">Geoestadística</span></h1>
           <p class="wo-cover__subtitle">Elige tu próxima ubicación con datos, no intuición</p>
@@ -906,8 +906,8 @@
           <h1 class="wo-cta__title">¿Listo para expandir con <span class="accent">certeza</span>?</h1>
           <p class="wo-cta__subtitle">Agenda tu brief gratuito hoy</p>
           <div class="wo-cta__contact">
-            <p><a href="mailto:contacto@workalogico.mx" style="color: inherit; text-decoration: none;">contacto@workalogico.mx</a></p>
-            <p><a href="https://www.workalogico.mx" target="_blank" rel="noopener" style="color: inherit; text-decoration: none;">www.workalogico.mx</a></p>
+            <p><a href="mailto:bo@workalogico.com" style="color: inherit; text-decoration: none;">bo@workalogico.com</a></p>
+            <p><a href="https://www.workalogico.com" target="_blank" rel="noopener" style="color: inherit; text-decoration: none;">www.workalogico.com</a></p>
           </div>
         </div>
         <div class="grid-background" role="presentation" aria-hidden="true"></div>
