--- a/deck-wo-automatizacion/index.html
+++ b/deck-wo-automatizacion/index.html
@@ -339,8 +339,8 @@
           <h1 class="wo-cta__title">¿Listo para <span class="accent">automatizar</span>?</h1>
           <p class="wo-cta__subtitle">Agenda tu auditoría de procesos gratuita</p>
           <div class="wo-cta__contact">
-            <p><a href="mailto:contacto@workalogico.mx" style="color: inherit; text-decoration: none;">contacto@workalogico.mx</a></p>
-            <p><a href="https://www.workalogico.mx" target="_blank" rel="noopener" style="color: inherit; text-decoration: none;">www.workalogico.mx</a></p>
+            <p><a href="mailto:bo@workalogico.com" style="color: inherit; text-decoration: none;">bo@workalogico.com</a></p>
+            <p><a href="https://www.workalogico.com" target="_blank" rel="noopener" style="color: inherit; text-decoration: none;">www.workalogico.com</a></p>
           </div>
         </div>
         <div class="grid-background" role="presentation" aria-hidden="true"></div>
