--- a/index.html
+++ b/index.html
@@ -406,6 +406,8 @@
     .deck-card:nth-child(4) { animation-delay: 0.4s; }
     .deck-card:nth-child(5) { animation-delay: 0.5s; }
     .deck-card:nth-child(6) { animation-delay: 0.6s; }
+    .deck-card:nth-child(7) { animation-delay: 0.7s; }
+    .deck-card:nth-child(8) { animation-delay: 0.8s; }
     
     /* tsParticles */
     #tsparticles {
@@ -466,6 +468,33 @@
           <p class="deck-card__description">Posicionamiento 2026 como Agencia de Desarrollo de Proyectos. 4 pilares, WoOS, metodología y modelo operativo.</p>
           <div class="deck-card__meta">
             <span class="deck-card__slides">📊 12 slides</span>
+            <span class="deck-card__arrow">→</span>
+          </div>
+        </a>
+      </div>
+      
+      <!-- PROPUESTAS DE CLIENTE -->
+      <div class="section-header">
+        <div class="section-icon">
+          <!-- Ícono de propuesta / presentación ejecutiva -->
+          <svg viewBox="0 0 24 24">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+            <polyline points="14 2 14 8 20 8"/>
+            <line x1="16" y1="13" x2="8" y2="13"/>
+            <line x1="16" y1="17" x2="8" y2="17"/>
+            <polyline points="10 9 9 9 8 9"/>
+          </svg>
+        </div>
+        <h2 class="section-title">Propuestas de Cliente</h2>
+        <p class="section-description">Propuestas estratégicas personalizadas. Ecosistemas digitales completos para proyectos específicos.</p>
+      </div>
+      <div class="decks-grid" style="grid-template-columns: minmax(320px, 400px); justify-content: center;">
+        <a href="deck-wo-miramar-hills/" class="deck-card">
+          <span class="deck-card__badge deck-card__badge--yellow">Inmobiliario</span>
+          <h3 class="deck-card__title">Miramar Hills</h3>
+          <p class="deck-card__description">Ecosistema digital completo para desarrollo inmobiliario. Arquitectura web, marketing y operación integrada.</p>
+          <div class="deck-card__meta">
+            <span class="deck-card__slides">📊 11 slides</span>
             <span class="deck-card__arrow">→</span>
           </div>
         </a>
