--- a/index.html
+++ b/index.html
@@ -653,8 +653,8 @@
     <footer>
       <p>© 2026 Workalógico • Growth Studio</p>
       <div class="footer-links">
-        <a href="mailto:contacto@workalogico.mx">contacto@workalogico.mx</a>
-        <a href="https://www.workalogico.mx" target="_blank" rel="noopener">www.workalogico.mx</a>
+        <a href="mailto:contacto@workalogico.com">contacto@workalogico.com</a>
+        <a href="https://www.workalogico.com" target="_blank" rel="noopener">www.workalogico.com</a>
       </div>
     </footer>
   </div>
