Changes in Growth Thesis

--- a/deck-wo-geoanalisis-onepager/index.html
+++ b/deck-wo-geoanalisis-onepager/index.html
@@ -1307,7 +1307,7 @@
   
   <!-- Anime.js + Workalógico Animation System -->
   <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.2/lib/anime.min.js"></script>
-  <script src="../wo-anime.js"></script>
+  <script type="module" src="../wo-anime/wo-anime-bundle.js"></script>
   
   <!-- tsParticles + Workalógico Particles System -->
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
