--- a/deck-wo-miramar-hills/index.html
+++ b/deck-wo-miramar-hills/index.html
@@ -1304,7 +1304,7 @@
   
   <!-- Anime.js (requerido para animaciones) -->
   <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.2/lib/anime.min.js"></script>
-  <script src="../wo-anime.js"></script>
+  <script type="module" src="../wo-anime/wo-anime-bundle.js"></script>
   
   <!-- Workalógico Teseracto Components -->
   <script src="../wo-components/wo-teseracto.js"></script>
