--- a/hub/colors.html
+++ b/hub/colors.html
@@ -19,6 +19,9 @@
   <!-- Design Tokens -->
   <link rel="stylesheet" href="../wo-tokens.css">
   
+  <!-- Design System -->
+  <link rel="stylesheet" href="../wo-design-system.css">
+  
   <!-- Hub Styles -->
   <link rel="stylesheet" href="hub.css">
   
@@ -118,6 +121,9 @@
         <h4>Fundamentos</h4>
         <a href="colors.html" class="active">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M12 3a9 9 0 1 0 0 18h3a2 2 0 0 0 0-4h-1a2 2 0 0 1 0-4h2a2 2 0 0 0 2-2 6 6 0 0 0-6-6z"/><circle cx="8" cy="10" r="1"/><circle cx="6.5" cy="14" r="1"/><circle cx="10.5" cy="6.5" r="1"/></svg></span> Colores
+        </a>
+        <a href="color-lab.html">
+          <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M9 2v6l3 2 3-2V2"/><path d="M15 10v6a6 6 0 0 1-6 0v-6"/><circle cx="12" cy="18" r="3"/></svg></span> Color Lab
         </a>
         <a href="typography.html">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M5 6h14"/><path d="M12 6v12"/><path d="M8 18h8"/></svg></span> Tipografía
@@ -431,7 +437,7 @@
       
       <!-- Footer -->
       <footer class="hub-footer">
-        <p><a href="index.html">← Volver al Dashboard</a></p>
+        <p><a href="index.html">← Volver al Dashboard</a> | <a href="color-lab.html">Ir al Color Lab →</a></p>
       </footer>
     </main>
   </div>
