--- a/hub/spacing.html
+++ b/hub/spacing.html
@@ -19,6 +19,9 @@
   <!-- Design Tokens -->
   <link rel="stylesheet" href="../wo-tokens.css">
   
+  <!-- Design System -->
+  <link rel="stylesheet" href="../wo-design-system.css">
+  
   <!-- Hub Styles -->
   <link rel="stylesheet" href="hub.css">
 </head>
